--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-numpy==1.21.2
-pandas==1.3.3
-matplotlib==3.4.3
-matplotlib-inline==0.1.3
+matplotlib==3.5.0
+numpy==1.21.4
+pandas==1.3.4
+scikit-learn==1.0.1
+scipy==1.7.2
+seaborn==0.11.2
